5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1811_2567.log
== TEST (2019-06-11 17:51:51) 
-- CODE:
a = str(input("digite o numero de arteriscos: "))
for i in range(size(a)):
	print(size(a))
	print(size(a)-[0])
	print(size(a)-[0]-[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:52:00) 
-- CODE:
a = str(input("digite o numero de arteriscos: "))
for i in range(size(a)):
	print(size(a))
	print(size(a)-[0])
	print(size(a)-[0]-[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:53:41) 
-- CODE:
a = str(input("digite o numero de arteriscos: "))
for i in range(a):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:53:48) 
-- CODE:
a = str(input("digite o numero de arteriscos: "))
for i in range(a):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:53:54) 
-- CODE:
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(a):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:53:59) 
-- CODE:
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(a):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:54:07) 
-- CODE:
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:54:20) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:54:28) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:56:37) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	b = replace.(size(a), "*")
	print(b)
	
-- ERROR:
File "XXXX", line 4
    b = replace.(size(a), "*")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:56:42) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	b = replace.(size(a), "*")
	print(b)
	
-- ERROR:
File "XXXX", line 4
    b = replace.(size(a), "*")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:56:44) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	b = replace.(size(a), "*")
	print(b)
	
-- ERROR:
File "XXXX", line 4
    b = replace.(size(a), "*")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:56:48) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:57:00) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:57:07) 
-- CODE:
from numpy import*
a = str(int(input("digite o numero de arteriscos: ")))
for i in range(size(a)):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:38:15) 
-- CODE:
from numpy import*
a = input("digite o numero de arteriscos: ")

for i in range(a):
	ch = "*"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:39:40) 
-- CODE:
from numpy import*
a = input("digite o numero de arteriscos: ")
for i in range(a):
	ch = "*"*(a-i)
	print(ch)

	
-- EXECUTION TIME:
0.943717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2567/main.py", line 3, in <module>
    for i in range(a):
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:39:41) 
-- CODE:
from numpy import*
a = input("digite o numero de arteriscos: ")
for i in range(a):
	ch = "*"*(a-i)
	print(ch)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:40:12) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:40:18) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:41:57) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*j
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:12) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(j+1)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:42:31) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(j+1)
	print(ch2)
	
-- EXECUTION TIME:
1.17274
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:57) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:55:28) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in a:
	ch = "*"*(a-i)
	print(ch)
for j in a:
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:55:55) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- EXECUTION TIME:
1.22463
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
********
*********
**********
***********
************
*************
**************
***************
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*****************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:19:08) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- EXECUTION TIME:
1.0881
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
********
*********
**********
***********
************
*************
**************
***************
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*****************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:14) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:19:25) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- EXECUTION TIME:
0.880104
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
********
*********
**********
***********
************
*************
**************
***************
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*****************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:03) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:40) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:47) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:51) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a):
	ch = "*"*(a-i)
	print(ch)
for j in range(a):
	ch2 = "*"*(a+j)
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:45) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a, 0, -1):
	ch = "*"*i
	print(ch)
for j in range(1, a+1, 1):
	ch2 = "*"*j
	print(ch2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:24:51) 
-- CODE:
from numpy import*
a = int(input("digite o numero de arteriscos: "))
for i in range(a, 0, -1):
	ch = "*"*i
	print(ch)
for j in range(1, a+1, 1):
	ch2 = "*"*j
	print(ch2)
	
-- EXECUTION TIME:
0.994965
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
